# smart-dns-updater

./: .build.yml  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  go.mod  go.sum  helper.bzl  main.go  main_test.go  status.sh
.github/workflows/: build.yml  golangci-lint.yml  test.yml
