load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# gazelle:prefix github.com/imeyer/smart-dns-updater
gazelle(name = "gazelle")

go_library(
    name = "smart-dns-updater_lib",
    srcs = ["main.go"],
    importpath = "github.com/imeyer/smart-dns-updater",
    visibility = ["//visibility:private"],
    x_defs = {
        "version": "{STABLE_VERSION}",
        "gitSha": "{STABLE_GIT_SHA}",
    },
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_miekg_dns//:dns",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_google_api//dns/v1:dns",
    ],
)

go_binary(
    name = "smart-dns-updater",
    embed = [":smart-dns-updater_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "smart-dns-updater_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":smart-dns-updater_lib"],
    deps = [
        "@com_github_miekg_dns//:dns",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
        "@com_github_stretchr_testify//require",
    ],
)
