# buildifier: disable=module-docstring
module(
    name = "smart-dns-updater",
)

bazel_dep(name = "rules_go", version = "0.49.0", repo_name = "rules_go")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "gazelle")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.host()

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_burntsushi_toml", "com_github_miekg_dns", "com_github_prometheus_client_golang", "com_github_stretchr_testify", "org_golang_google_api")
